--- a/week4/day4-inference-instead-of-endpoints.ipynb
+++ b/week4/day4-inference-instead-of-endpoints.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e610bf56-a46e-4aff-8de1-ab49d62b1ad3",
    "metadata": {},
    "outputs": [],
@@ -62,35 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4f672e1c-87e9-4865-b760-370fa605e614",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully loaded token beginning hf_gI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# environment\n",
     "\n",
     "load_dotenv()\n",
     "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
     "os.environ['ANTHROPIC_API_KEY'] = os.getenv('ANTHROPIC_API_KEY', 'your-key-if-not-using-env')\n",
-    "os.environ['HF_TOKEN'] = os.getenv('HF_TOKEN', 'your-key-if-not-using-env')\n",
-    "\n",
-    "if os.environ['HF_TOKEN'] == 'your-key-if-not-using-env':\n",
-    "    print(\"Failed to load token, is it inside your .env file?\")\n",
-    "else:\n",
-    "    print(f\"Successfully loaded token beginning {os.environ['HF_TOKEN'][:5]}\")"
+    "os.environ['HF_TOKEN'] = os.getenv('HF_TOKEN', 'your-key-if-not-using-env')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "8aa149ed-9298-4d69-8fe2-8f5de0f667da",
    "metadata": {},
    "outputs": [],
@@ -99,15 +86,13 @@
     "\n",
     "openai = OpenAI()\n",
     "claude = anthropic.Anthropic()\n",
-    "code_qwen_inference_hf = OpenAI(base_url=\"https://api-inference.huggingface.co/v1/\", api_key=os.environ['HF_TOKEN'])\n",
     "OPENAI_MODEL = \"gpt-4o\"\n",
-    "CLAUDE_MODEL = \"claude-3-5-sonnet-20240620\"\n",
-    "CODE_QWEN_MODEL = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B\" #\"Qwen/CodeQwen1.5-7B-Chat\""
+    "CLAUDE_MODEL = \"claude-3-5-sonnet-20240620\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6896636f-923e-4a2c-9d6c-fac07828a201",
    "metadata": {},
    "outputs": [],
@@ -119,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8e7b3546-57aa-4c29-bc5d-f211970d04eb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c6190659-f54c-4951-bef4-4960f8e51cc4",
    "metadata": {},
    "outputs": [],
@@ -148,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "71e1ba8c-5b05-4726-a9f3-8d8c6257350b",
    "metadata": {},
    "outputs": [],
@@ -163,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e7d2fea8-74c6-4421-8f1e-0e76d5b201b9",
    "metadata": {},
    "outputs": [],
@@ -180,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7cd84ad8-d55c-4fe0-9eeb-1895c95c4a9d",
    "metadata": {},
    "outputs": [],
@@ -202,24 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "8047295c-ec4a-489c-8dad-79db73a2dfca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def optimize_code_qwen(python):    \n",
-    "    stream = code_qwen_inference_hf.chat.completions.create(model=CODE_QWEN_MODEL, messages=messages_for(python), stream=True)\n",
-    "    reply = \"\"\n",
-    "    for chunk in stream:\n",
-    "        fragment = chunk.choices[0].delta.content or \"\"\n",
-    "        reply += fragment\n",
-    "        print(fragment, end='', flush=True)\n",
-    "    write_output(reply)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a1cbb778-fa57-43de-b04b-ed523f396c38",
    "metadata": {},
    "outputs": [],
@@ -309,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c3b497b3-f569-420e-b92e-fb0f49957ce0",
    "metadata": {},
    "outputs": [],
@@ -413,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0be9f47d-5213-4700-b0e2-d444c7c738c0",
    "metadata": {},
    "outputs": [],
@@ -429,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8669f56b-8314-4582-a167-78842caea131",
    "metadata": {},
    "outputs": [],
@@ -450,23 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "fcb30458-1023-41d7-bc9a-7e95d5e782aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def stream_code_qwen(python):    \n",
-    "    stream = code_qwen_inference_hf.chat.completions.create(model=CODE_QWEN_MODEL, messages=messages_for(python), stream=True)\n",
-    "    reply = \"\"\n",
-    "    for chunk in stream:\n",
-    "        fragment = chunk.choices[0].delta.content or \"\"\n",
-    "        reply += fragment\n",
-    "        yield reply.replace('```cpp\\n','').replace('```','')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2f1ae8f5-16c8-40a0-aa18-63b617df078d",
    "metadata": {},
    "outputs": [],
@@ -476,8 +428,6 @@
     "        result = stream_gpt(python)\n",
     "    elif model==\"Claude\":\n",
     "        result = stream_claude(python)\n",
-    "    elif model==\"Code Qwen\":\n",
-    "        result = stream_code_qwen(python)\n",
     "    else:\n",
     "        raise ValueError(\"Unknown model\")\n",
     "    for stream_so_far in result:\n",
@@ -486,47 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f1ddb38e-6b0a-4c37-baa4-ace0b7de887a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with gr.Blocks() as ui:\n",
     "    with gr.Row():\n",
     "        python = gr.Textbox(label=\"Python code:\", lines=10, value=python_hard)\n",
     "        cpp = gr.Textbox(label=\"C++ code:\", lines=10)\n",
     "    with gr.Row():\n",
-    "        model = gr.Dropdown([\"GPT\", \"Claude\", \"Code Qwen\"], label=\"Select model\", value=\"GPT\")\n",
+    "        model = gr.Dropdown([\"GPT\", \"Claude\"], label=\"Select model\", value=\"GPT\")\n",
     "        convert = gr.Button(\"Convert code\")\n",
     "\n",
     "    convert.click(optimize, inputs=[python, model], outputs=[cpp])\n",
@@ -536,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "19bf2bff-a822-4009-a539-f003b1651383",
    "metadata": {},
    "outputs": [],
@@ -553,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "77f3ab5d-fcfb-4d3f-8728-9cacbf833ea6",
    "metadata": {},
    "outputs": [],
@@ -571,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9a2274f1-d03b-42c0-8dcc-4ce159b18442",
    "metadata": {},
    "outputs": [],
@@ -584,40 +504,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "f1303932-160c-424b-97a8-d28c816721b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with gr.Blocks(css=css) as ui:\n",
     "    gr.Markdown(\"## Convert code from Python to C++\")\n",
@@ -625,7 +515,7 @@
     "        python = gr.Textbox(label=\"Python code:\", value=python_hard, lines=10)\n",
     "        cpp = gr.Textbox(label=\"C++ code:\", lines=10)\n",
     "    with gr.Row():\n",
-    "        model = gr.Dropdown([\"GPT\", \"Claude\", \"Code Qwen\"], label=\"Select model\", value=\"GPT\")\n",
+    "        model = gr.Dropdown([\"GPT\", \"Claude\"], label=\"Select model\", value=\"GPT\")\n",
     "    with gr.Row():\n",
     "        convert = gr.Button(\"Convert code\")\n",
     "    with gr.Row():\n",
@@ -640,14 +530,6 @@
     "    cpp_run.click(execute_cpp, inputs=[cpp], outputs=[cpp_out])\n",
     "\n",
     "ui.launch(inbrowser=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2922afc6-eb62-4a28-b3e7-ef0b6d2fc24a",
-   "metadata": {},
-   "source": [
-    "# New code"
    ]
   },
   {
@@ -957,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
