--- a/week5/day3.ipynb
+++ b/week5/day3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ba2779af-84ef-4227-9e9e-6eaf0df87e77",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "802137aa-8a74-45e0-a487-d1974927d7ca",
    "metadata": {},
    "outputs": [],
@@ -44,9 +44,49 @@
     "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
     "from langchain_chroma import Chroma\n",
     "import numpy as np\n",
-    "from sklearn.manifold import TSNE\n",
-    "import plotly.graph_objects as go"
+    "# from sklearn.manifold import TSNE\n",
+    "# import plotly.graph_objects as go"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7a191128-b0a3-459a-aa8d-e102b22b631b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmanifold\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TSNE\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.manifold import TSNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f181e63f-8938-475f-95b4-d661a6a346b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install -c conda-forge scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68367d9a-7626-4fbc-a71b-15abf091bfb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -358,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
